# kernelpack-python

./: README.md  pyproject.toml
examples/: poisson_convergence_2d_neumann.py  poisson_convergence_3d_neumann.py  pusl_incompressible_euler_convergence_2d.py
scripts/: render_readme_examples.py
src/kernelpack/: __init__.py  _numba.py
src/kernelpack/divfree/: __init__.py  core.py
src/kernelpack/domain/: __init__.py  core.py  dual.py
src/kernelpack/geometry/: __init__.py  core.py
src/kernelpack/nodes/: __init__.py  core.py  dual.py
src/kernelpack/poly/: __init__.py  core.py
src/kernelpack/rbffd/: __init__.py  core.py
src/kernelpack/solvers/: __init__.py  _common.py  _pu.py  core.py  diffusion.py  heterogeneous_multispecies_diffusion.py  incompressible_euler.py  multispecies_diffusion.py  nonlinear_variable_poisson.py  poisson.py  pu_diffusion.py  pu_multispecies.py  pu_sl_advection.py  pu_sl_fd_advection_diffusion.py  pu_sl_multispecies.py  pu_sl_pu_advection_diffusion.py  variable_poisson.py
src/kernelpack/solvers/detail/: __init__.py  incompressible_euler_bdf_backend.py
tests/: test_convergence_examples.py  test_divfree.py  test_incompressible_euler.py  test_nodes_rbffd.py  test_poly.py  test_pu_solvers.py  test_solvers.py
